fix overlap

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -588,8 +588,13 @@ li {
 }
 .flip-card {
   width: 240px;
-  height: 240px;
+  height: 220px;
   perspective: 1000px;
+}
+
+.flip-card-title {
+  min-height: 30px;
+  width: 240px;
 }
 
 .flip-card-inner {
@@ -607,7 +612,7 @@ li {
 .flip-card-back {
   position: absolute;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   backface-visibility: hidden;
 }
 
@@ -618,6 +623,7 @@ li {
 .flip-card-back {
   /* Back card styles */
   transform: rotateY(180deg);
+  background-color: #ff9800;
 }
 
 .show-details-button,
